test/should-fail/vsgc1247.f3
/*
 * @test/compile-error
 */
var sq=(function (x:Integer):Integer{x*x})(2,3); 

